# USTC_Compute_Science_Lab

./: .gitignore  README.md
Algorithm_Lab/Lab2/: CMakeLists.txt
Algorithm_Lab/Lab2/T2/: CMakeLists.txt  T2  T2.c  a.out
Algorithm_Lab/Lab3/: T1  T1.c  T2  T2.cpp  T3  T3.cpp  T3_tmp.c
Algorithm_Lab/Lab4/: LCA  LCA.c  T1  T1.c  T2  T2.c  T2.cpp  T3  T3_FW.c  T3_J.cpp  a.out  data.txt  generate_Test.py  test.c
Algorithm_Lab/Lab5/: T1  T1.cpp  T2.c  T2_plus.cpp  a.out
COD23_Lab/Lab0/: Lab0.xpr
COD_Lab/Lab1-ALU/: Lab1-ALU.xpr  vivado.jou
COD_Lab/Lab2/: Lab2.xpr  vivado.jou  vivado_10052.backup.jou  vivado_11884.backup.jou  vivado_14800.backup.jou  vivado_16580.backup.jou  vivado_17132.backup.jou  vivado_pid7884.str
COD_Lab/Lab3/: data.coe  ins.coe  riscv1.asm  riscv1_1.asm
COD_Lab/Lab4/: Lab4_单周期CPU设计.ppt  all10_test.asm  fib_test.asm  fib_test.coe  riscv2.asm  ~$Lab4_单周期CPU设计.ppt
COD_Lab/Lab5/: Lab5.xpr
COD_Lab/project_1/: project_1.xpr
Compiler_Lab/Lab1/: fibonacci.c  fibonacci.ll
DB_Lab/Lab1/: Lab1.sql  insert_data.sql
DB_Lab/Lab3/: api.py  course_manage_window.py  gui.py  main.py  paper_manage_window.py  project_manage_window.py  query_window.py  report.md
Data_Structure_Lab/Dijkstra/: CMakeLists.txt  input.txt  source2run.sh
Data_Structure_Lab/Huffman/: CMakeLists.txt  a.out  debug.sh  source2run.sh  test.c
ICS_Lab/LabS/LAB_S_Attachment/: .ccls  CMakeLists.txt  LabS_孙昊哲_PB20000277.md
ICS_Lab/LabS/LAB_S_Attachment/include/: common.h  memory.h
ICS_Lab/LabS/LAB_S_Attachment/src/: main.cpp  memory.cpp  register.cpp  simulator.cpp
(+5140 files in other folders)
